// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account action creators Should correctly handle an empty encrypted seed table 1`] = `
Array [
  Object {
    "routeName": "Landing",
    "type": "Navigation/NAVIGATE",
  },
]
`;

exports[`Account action creators Should correctly handle existing user identity if cached 1`] = `
Array [
  Object {
    "type": "DID_SET",
    "value": "did:jolo:first",
  },
  Object {
    "routeName": "Home",
    "type": "Navigation/NAVIGATE",
  },
]
`;

exports[`Account action creators Should correctly handle existing user identity if not cached 1`] = `
Array [
  Object {
    "type": "DID_SET",
    "value": "did:jolo:first",
  },
  Object {
    "routeName": "Home",
    "type": "Navigation/NAVIGATE",
  },
]
`;

exports[`Account action creators Should correctly handle more existing user identities 1`] = `
Array [
  Object {
    "type": "DID_SET",
    "value": "did:jolo:first",
  },
  Object {
    "routeName": "Home",
    "type": "Navigation/NAVIGATE",
  },
]
`;

exports[`Account action creators Should correctly retrieve claims from device storage db on setClaimForDid 1`] = `
Array [
  Object {
    "claims": Object {
      "Contact": Array [
        Object {
          "claimData": Object {
            "email": "test@jolocom.com",
          },
          "credentialType": "Email",
          "expires": 2019-10-15T19:59:38.406Z,
          "id": "claimId:61adc6e7b1448",
          "issuer": Object {
            "did": "did:jolo:b310d293aeac8a5ca680232b96901fe85988fde2860a1a5db69b49762923cc88",
          },
          "subject": "did:jolo:b310d293aeac8a5ca680232b96901fe85988fde2860a1a5db69b49762923cc88",
        },
      ],
    },
    "type": "SET_CLAIMS_FOR_DID",
  },
]
`;

exports[`Account action creators should correctly save claim 1`] = `
Array [
  Object {
    "claims": Object {},
    "type": "SET_CLAIMS_FOR_DID",
  },
  Object {
    "actions": Array [
      Object {
        "routeName": "Home",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": null,
    "type": "Navigation/RESET",
  },
]
`;
